--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
     <title>Ansel Tribute</title>
   </head>
   <body>
@@ -18,8 +24,13 @@
           alt="Random image of Ansel"
           class="photoFrame"
         />
-        <button>Random Image Generator</button>
+        <div class="button">
+          <button class="btn btn-secondary" id="imageGenerator">
+            Random Photo Generator
+          </button>
+        </div>
       </div>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
