--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/12e91dbb7b.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Ansel Tribute</title>
   </head>
   <body>
     <div class="container main">
+      <h3>in loving memory <i class="fa-solid fa-paw"></i></h3>
       <h1>Ansel</h1>
-      <h2>in loving memory</h2>
-      <h3>~ 2008-2022 ~</h3>
+      <h2>(2008-2022)</h2>
+      <div class="button">
+        <button class="btn btn-secondary" id="imageGenerator">
+          Random Ansel Photo
+        </button>
+      </div>
       <div>
         <img
           src="/images/10.jpg"
           alt="Random image of Ansel"
           class="photoFrame"
         />
-        <div class="button">
-          <button class="btn btn-secondary" id="imageGenerator">
-            Random Photo Generator
-          </button>
-        </div>
       </div>
     </div>
     <script src="src/index.js"></script>
