--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
   </head>
   <body>
     <div class="container main">
-      <h3>in loving memory <i class="fa-solid fa-paw"></i></h3>
+      <h3>
+        <i class="fa-solid fa-paw"></i> in loving memory
+        <i class="fa-solid fa-paw"></i>
+      </h3>
       <h1>Ansel</h1>
-      <h2>(2008-2022)</h2>
+      <h2>2008-2022</h2>
       <div class="button">
         <button class="btn btn-secondary" id="imageGenerator">
           Random Ansel Photo
